--- a/patientpastfordoctor2.css
+++ b/patientpastfordoctor2.css
@@ -11,13 +11,13 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #6AA4B0;
+  background: url("images/background2.jpg"); 
   padding: 30px;
 }
 .container{
   position: relative;
-  max-width: 850px;
-  width: 50%;
+  max-width: 700px;
+  width: 100%;
   background: #fff;
   padding: 40px 30px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.2);
@@ -55,8 +55,7 @@ body{
   position: absolute;
   height: 100%;
   width: 100%;
-  background: #2B4560;
-  opacity: 0.5;
+  background-color:#2B4560  ;
   z-index: 12;
 }
 .container .cover::after{
@@ -76,8 +75,8 @@ body{
   z-index: 130;
   height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   align-items: center;
   justify-content: center;
 }
@@ -97,46 +96,52 @@ body{
   width: 100%;
   background: #fff;
 }
-/* .container .form-content{
-  width: 100%;
-  display: flex;
+.container .form-content{
+  /* display: flex; */
   align-items: center;
   justify-content: space-between;
-} */
-/* .form-content .login-form,
+}
+.form-content .login-form,
 .form-content .signup-form{
   width: calc(100% / 2 - 25px);
-} */
-.forms .signup-form .title{
+}
+.forms .form-content .title{
   position: relative;
   font-size: 24px;
   font-weight: 500;
   color: #333;
 }
-.forms .signup-form .title:before{
+.forms .form-content .title:before{
   content: '';
   position: absolute;
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 80px;
+  width: 155px;
   background: #2B4560;
 }
-/* .forms .signup-form  .title:before{
-  width: 40px;
-} */
-.forms .signup-form .input-boxes {
-  margin-top: 30px;
+.forms .signup-form  .title:before{
+  width: 20px;
 }
-.forms .signup-form .input-box, .forms .signup-form .selection {
-  display: inline-block;
+.forms .form-content .input-boxes{
+  margin-top: 30px;
+  /* margin-left: 100px; */
+}
+
+.input-boxes{
+    margin-left: 200px;
+
+
+}
+.forms .form-content .input-box{
+  /* display: flex; */
   align-items: center;
   height: 50px;
   width: 100%;
-  margin: 40px 0;
+  margin: 10px 0;
   position: relative;
 }
-/* .signup-form .input-box input ,  .signup-form  .selection{
+.form-content .input-box input{
   height: 100%;
   width: 100%;
   outline: none;
@@ -146,61 +151,115 @@ body{
   font-weight: 500;
   border-bottom: 2px solid rgba(0,0,0,0.2);
   transition: all 0.3s ease;
-} */
-/* .signup-form .input-box input:focus,
-.signup-form .input-box input:valid{
+}
+.form-content .input-box input:focus,
+.form-content .input-box input:valid{
   border-color: #2B4560;
-} */
-/* .signup-form .input-box i{
+}
+.form-content .input-box i{
   position: absolute;
   color: #2B4560;
   font-size: 17px;
-} */
-
-.forms .signup-form .selection{
-
-    align-content:center;
 }
-.forms .signup-form .text{
+.forms .form-content .text{
   font-size: 14px;
   font-weight: 500;
   color: #333;
 }
-.forms .signup-form .text a{
+.forms .form-content .text a{
   text-decoration: none;
 }
-/* .forms .signup-form .text a:hover{
+.forms .form-content .text a:hover{
   text-decoration: underline;
-} */
-.forms .signup-form .button{
+}
+.forms .form-content .button{
   color: #fff;
   margin-top: 40px;
 }
-.forms .signup-form .button input{
+.forms .form-content .button input{
   color: #fff;
   background: #2B4560;
   border-radius: 6px;
-  width:70%;
-  padding: 10px;
+  padding: 0;
   cursor: pointer;
   transition: all 0.4s ease;
-} 
-.forms .signup-form .button input:hover{
-    background: #2B4560  ;
-  }
-/* .forms .signup-form .button input:hover{
-  background: #2B4560  ;
-}
-.forms .signup-form label{
-  color: #2B4560  ;
-  
 }
 
-/* .forms .signup-form label:hover{
-  text-decoration: underline;
+/* .button input{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  margin-left: 800px;
+  width: 10%;
+  height: 5%;
+  display: block;
+
+
+
+
 } */
-.forms .signup-form .login-text,
-.forms .signup-form .sign-up-text{
+
+#input-box{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  /* margin-left: 200px; */
+  float:right;
+  transform: translateX(500px);
+
+
+  width:150%;
+  height: 5%;
+  /* display: block; */
+
+}
+
+#input-box1{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 0;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:100%;
+  margin-top: 200px;
+  margin-right: 200px;
+  height: 10%;
+  transform: translateX(100px);
+  position:relative;
+  /* display: block; */
+}
+
+#input-box2{
+  color: #fff;
+  background: #2B4560;
+  border-radius: 6px;
+  padding: 1%;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  width:30%;
+  /* height: 10%; */
+  position:relative;
+  
+}
+.forms .form-content .button input:hover{
+  background: #2B4560;
+}
+.forms .form-content label{
+  color: #2B4560;
+  cursor: pointer;
+}
+.forms .form-content label:hover{
+  text-decoration: underline;
+}
+.forms .form-content .login-text,
+.forms .form-content .sign-up-text{
   text-align: center;
   margin-top: 25px;
 }
@@ -212,10 +271,10 @@ body{
     display: none;
   }
   .form-content .login-form,
-  .signup-form .signup-form{
+  .form-content .signup-form{
     width: 100%;
   }
-  .signup-form .signup-form{
+  .form-content .signup-form{
     display: none;
   }
   .container #flip:checked ~ .forms .signup-form{
@@ -225,34 +284,25 @@ body{
     display: none;
   }
 }
-/* 
-#input-box2{
+
+
+a{
+    margin-left: 500px;
+}
+.record-box{
+  background-color: blanchedalmond;
+  width: 210%;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.back-box{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
-    padding: 0;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    width:50%; */
-    /* margin-top: 200px; */
-    /* margin-right: 200px; */
- 
-    
-  
-  /* } */
-
-  #input-box3{
-    color: #fff;
-    background: #2B4560;
-    border-radius: 6px;
-    padding: 10px;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    width:70%;
-    /* margin-top: 200px; */
-    /* margin-right: 200px; */
- 
-    
-  
-  }
-
+    width: 15%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1%;
+    cursor:pointer;
+}
