--- a/submitreport1.css
+++ b/submitreport1.css
@@ -1,31 +1,29 @@
 /* Google Font Link */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-* {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins" , sans-serif;
 }
-body {
+body{
   min-height: 100vh;
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
-  background: url("images/background2.jpg");
+  align-items: center;
+  justify-content: center;
+  background: #6AA4B0;
   padding: 30px;
-  /* transform: translateX(-140px); */
 }
-.container {
+.container{
   position: relative;
-  /* max-width: 850px; */
-  width: 100%;
-  /* background: #fff; */
+  max-width: 850px;
+  width: 50%;
+  background: #fff;
   padding: 40px 30px;
-  /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); */
-  /* perspective: 2700px; */
- justify-content: left;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  perspective: 2700px;
 }
-.container .cover {
+.container .cover{
   position: absolute;
   top: 0;
   left: 50%;
@@ -36,43 +34,44 @@ body {
   transform-origin: left;
   transform-style: preserve-3d;
 }
-.container #flip:checked ~ .cover {
+.container #flip:checked ~ .cover{
   transform: rotateY(-180deg);
 }
-.container .cover .front,
-.container .cover .back {
+ .container .cover .front,
+ .container .cover .back{
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
 }
-.cover .back {
+.cover .back{
   transform: rotateY(180deg);
   backface-visibility: hidden;
 }
 .container .cover::before,
-.container .cover::after {
-  content: "";
+.container .cover::after{
+  content: '';
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: #2b4560;
+  background: #2B4560;
+  opacity: 0.5;
   z-index: 12;
 }
-.container .cover::after {
+.container .cover::after{
   opacity: 0.3;
   transform: rotateY(180deg);
   backface-visibility: hidden;
 }
-.container .cover img {
+.container .cover img{
   position: absolute;
   height: 100%;
   width: 100%;
   object-fit: cover;
   z-index: 10;
 }
-.container .cover .text {
+.container .cover .text{
   position: absolute;
   z-index: 130;
   height: 100%;
@@ -83,60 +82,61 @@ body {
   justify-content: center;
 }
 .cover .text .text-1,
-.cover .text .text-2 {
+.cover .text .text-2{
   font-size: 26px;
   font-weight: 600;
   color: #fff;
   text-align: center;
 }
-.cover .text .text-2 {
+.cover .text .text-2{
   font-size: 15px;
   font-weight: 500;
 }
-.container .forms {
+.container .forms{
   height: 100%;
   width: 100%;
-  /* background: #fff; */
+  background: #fff;
 }
-.container .form-content {
+/* .container .form-content{
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.form-content .login-form,
-.form-content .signup-form {
+} */
+/* .form-content .login-form,
+.form-content .signup-form{
   width: calc(100% / 2 - 25px);
-}
-.forms .form-content .title {
+} */
+.forms .signup-form .title{
   position: relative;
   font-size: 24px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .title:before {
-  content: "";
+.forms .signup-form .title:before{
+  content: '';
   position: absolute;
   left: 0;
   bottom: 0;
   height: 3px;
-  width: 180px;
-  background: #2b4560;
+  width: 110px;
+  background: #2B4560;
 }
-.forms .signup-form .title:before {
-  width: 20px;
-}
-.forms .form-content .input-boxes {
+/* .forms .signup-form  .title:before{
+  width: 40px;
+} */
+.forms .signup-form .input-boxes {
   margin-top: 30px;
 }
-.forms .form-content .input-box {
-  display: flex;
+.forms .signup-form .input-box, .forms .signup-form .selection {
+  display: inline-block;
   align-items: center;
   height: 50px;
   width: 100%;
-  margin: 10px 0;
+  margin: 40px 0;
   position: relative;
 }
-.form-content .input-box input {
+/* .signup-form .input-box input ,  .signup-form  .selection{
   height: 100%;
   width: 100%;
   outline: none;
@@ -144,129 +144,126 @@ body {
   padding: 0 30px;
   font-size: 16px;
   font-weight: 500;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid rgba(0,0,0,0.2);
   transition: all 0.3s ease;
-}
-.form-content .input-box input:focus,
-.form-content .input-box input:valid {
-  border-color: #2b4560;
-}
-.form-content .input-box i {
+} */
+/* .signup-form .input-box input:focus,
+.signup-form .input-box input:valid{
+  border-color: #2B4560;
+} */
+/* .signup-form .input-box i{
   position: absolute;
-  color: #2b4560;
+  color: #2B4560;
   font-size: 17px;
+} */
+
+.forms .signup-form .selection{
+
+    align-content:center;
 }
-.forms .form-content .text {
+.forms .signup-form .text{
   font-size: 14px;
   font-weight: 500;
   color: #333;
 }
-.forms .form-content .text a {
+.forms .signup-form .text a{
   text-decoration: none;
 }
-.forms .form-content .text a:hover {
+/* .forms .signup-form .text a:hover{
   text-decoration: underline;
-}
-.forms .form-content .button {
+} */
+.forms .signup-form .button{
   color: #fff;
   margin-top: 40px;
 }
-.forms .form-content .button input {
+.forms .signup-form .button input{
   color: #fff;
-  background: #2b4560;
+  background: #2B4560;
   border-radius: 6px;
-  padding: 0;
+  width:70%;
+  padding: 10px;
   cursor: pointer;
   transition: all 0.4s ease;
+} 
+.forms .signup-form .button input:hover{
+    background: #2B4560  ;
+  }
+/* .forms .signup-form .button input:hover{
+  background: #2B4560  ;
 }
-.forms .form-content .button input:hover {
-  background: #2b4560;
+.forms .signup-form label{
+  color: #2B4560  ;
+  
 }
-.forms .form-content label {
-  color: #2b4560;
-  cursor: pointer;
-}
-.forms .form-content label:hover {
+
+/* .forms .signup-form label:hover{
   text-decoration: underline;
-}
-.forms .form-content .login-text,
-.forms .form-content .sign-up-text {
+} */
+.forms .signup-form .login-text,
+.forms .signup-form .sign-up-text{
   text-align: center;
   margin-top: 25px;
 }
-.container #flip {
+.container #flip{
   display: none;
 }
 @media (max-width: 730px) {
-  .container .cover {
+  .container .cover{
     display: none;
   }
   .form-content .login-form,
-  .form-content .signup-form {
+  .signup-form .signup-form{
     width: 100%;
   }
-  .form-content .signup-form {
+  .signup-form .signup-form{
     display: none;
   }
-  .container #flip:checked ~ .forms .signup-form {
+  .container #flip:checked ~ .forms .signup-form{
     display: block;
   }
-  .container #flip:checked ~ .forms .login-form {
+  .container #flip:checked ~ .forms .login-form{
     display: none;
   }
 }
-
-table {
-   
-    border:1px solid black;
-    text-align: center;
-
-   
-  }
-th,td{
-    border:1px solid black;
-    text-align: center;
-   
-  white-space: nowrap;
-  overflow: hidden;
-  padding: 10px;
-}
-  
-  .date{
-      width: 200%;
-  }
-  #input-box2{
-    color: #fff;
-    background: #2B4560;
-    border-radius: 6px;
-    padding: 1%;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    width:20%;
-    height:20%;
-    /* margin-top: 200px; */
-    /* margin-right: 200px; */
- 
-    
-  
-  }
-
-  #input-box3{
+/* 
+#input-box2{
     color: #fff;
     background: #2B4560;
     border-radius: 6px;
     padding: 0;
     cursor: pointer;
     transition: all 0.4s ease;
-    width:400%;
-    height:6%;
-    transform: translate(900px,245px);
-    
+    width:50%; */
+    /* margin-top: 200px; */
+    /* margin-right: 200px; */
+ 
     
   
+  /* } */
+
+  #input-box3{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    width:70%;
+    /* margin-top: 200px; */
+    /* margin-right: 200px; */
   }
 
+  #input-box4{
+    color: #fff;
+    background: #2B4560;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    font-size: 16px;
+  }
 
+  
   .record-box{
     /* background-color: blanchedalmond; */
     color: #fff;
